# primitiv-nmt

./: .gitignore  CMakeLists.txt  README.md  config.h.in  download_data.sh  dump_corpus.cc  dump_vocab.cc  encdec_attention.cc  lstm.h  make_corpus.cc  make_vocab.cc  makefile  messages.proto  mymt.proto  sample.sh  sampler.h  train.cc  train_encdec.cc  utils.h  vocab.h  vocabulary.h
mymt/: CMakeLists.txt  affine.h  attention.h  attention_encoder_decoder.h  attention_nmt.h  dump_vocab.cc  encoder_decoder.h  fixed_length_decoder.h  fld_utils.h  lstm.h  mcmc2_fld.cc  mcmc_fld.cc  nmt_utils.h  resume_encdec.cc  resume_fld.cc  sampler.h  scorer_fld.cc  test_encdec.cc  test_encdec_ensemble.cc  train_encdec.cc  train_fld.cc  utils.h  vocabulary.h
primitiv_nmt/: CMakeLists.txt  affine.h  attention.h  config.h.in  dump_corpus.cc  dump_vocab.cc  encoder_decoder.h  lstm.h  make_corpus.cc  make_vocab.cc  nmt_utils.h  primitiv_nmt.proto  resume.cc  sampler.h  train.cc  translate.cc  translate_ensemble.cc  utils.h  vocabulary.h
